May have figured out nameplate spacing issue

--- a/MySiteStyle.css
+++ b/MySiteStyle.css
@@ -70,7 +70,6 @@ p
 {
     display:inline-block;
     text-align:left;
-    width:700px;
     /*Consider spicing up the cells by adding borders and what not*/
 }
 
